<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2007-2008 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.


-->
<resources>

    <!--
         ***************************
	     About information
	     ***************************

    -->


    <!-- Automatically filled in by Launchpad: -->
    <string name="about_translators">translator-credits</string>

    <!-- Short explanation of the application (max. 80 characters) -->
    <string name="about_comments">Manage files on the SD card with OI File Manager.</string>

    <!--
         ***************************
	     Applicatio-specific strings
	     ***************************

    -->
    <!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
    <string name="app_name">OI File Manager</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>

    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_details">Details</string>
    <string name="menu_more">More</string>
    <string name="menu_compress">Compress (ZIP)</string>
    <string name="menu_extract">Extract (ZIP)</string>
    <string name="menu_include_in_media_scan">Include in media scan</string>
    <string name="menu_exclude_from_media_scan">Exclude from media scan</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="folder_name">Folder name</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="really_delete">Do you really want to delete %s?</string>
    <string name="title_warning_some_may_not_work">Warning</string>
    <string name="warning_some_may_not_work">Some of the following options may not work.</string>
    <string name="show_warning_again">Show warning again</string>

    <!-- Strings for a multi select feature -->
    <string name="really_delete_multiselect">Do you really want to delete %d files?</string>
    <string name="multiselect_title">Select multiple files</string>
    <string name="pick_title">File picker</string>

    <!-- Strings for details table -->
    <string name="details_type">Type</string>
    <string name="details_type_folder">Folder</string>
    <string name="details_type_file">File</string>
    <string name="details_type_other">Other</string>
    <string name="details_size">Size</string>
    <string name="details_permissions">Permissions</string>
    <string name="details_hidden">Hidden</string>
    <string name="details_lastmodified">Last Modified</string>
    <string name="details_yes">Yes</string>
    <string name="details_no">No</string>

    <!-- Construct a unique file name of a file called %s. -->
    <string name="copied_file_name">Copy of %s</string>

    <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
    <string name="copied_file_name_2">Copy %1$d of %2$s</string>
    <string name="media_scan_included">This folder will be included in the next media scan.</string>
    <string name="media_scan_excluded">This folder will be excluded during the next media scan.</string>
    <string name="error_generic">An error occurred: </string>
    <string name="error_media_scan">Could not change media scan settings.</string>
    <string name="send_not_available">No application available for sending.</string>
    <string name="application_not_available">Application not available</string>

    <!--
         ***************************
	     Preferences
	     ***************************

    -->
    <!-- Menu item for Settings -->
    <string name="settings">Settings</string>

    <!-- Category for preferences. -->
    <string name="preference_advanced_features">Advanced features</string>
    <string name="preference_mediascan_title">Exclude from media scan</string>
    <string name="preference_mediascan_summary_on">Show menu item to exclude folders from media scan.</string>
    <string name="preference_mediascan_summary_off">Hide menu item to exclude folders from media scan.</string>
    <string name="preference_showallwarning_title">Show all warnings</string>
    <string name="preference_showallwarning_summary_on">Show all warning messages</string>
    <string name="preference_showallwarning_summary_off">Suppress warning messages</string>
    <string name="preference_displayhiddenfiles_title">Display hidden files</string>
    <string name="preference_displayhiddenfiles_summary_on">Display hidden files</string>
    <string name="preference_displayhiddenfiles_summary_off">Hide hidden files</string>
    <string name="preference_sort_settings">Sort settings</string>
    <string name="preference_sortby">Sort by</string>
    <string name="preference_sortby_ascending">In ascending order</string>
    <string name="preference_sortby_ascending_summary_on">Sort in ascending order</string>
    <string name="preference_sortby_ascending_summary_off">Sort in descending order</string>

    <string-array name="preference_sortby_names">
        <item>Name</item>
        <item>Size</item>
        <item>Last modified</item>
        <item>File extension</item>
    </string-array>

    <string name="preference_usedarktheme_title">Use dark theme (Requires restart of app)</string>
    <string name="preference_usedarktheme_summary_on">Dark theme selected</string>
    <string name="preference_usedarktheme_summary_off">Light theme selected</string>

    <!--
         ***************************
   		 Strings for the 'Save as' feature
    	 ***************************

    -->
    <string name="saveas_no_file_picked">You haven\'t picked any file.</string>
    <string name="saveas_error">An error occured.</string>
    <string name="saveas_file_saved">File successfully saved!</string>

    <!--
         ***************************
             Strings for the 'Compressing' and 'Extracting' feature
          ***************************

    -->
    <string name="compressing_success">Item compressed successfully</string>
    <string name="compressing_error">Could not compress the item</string>
    <string name="extracting_success">Item extracted successfully</string>
    <string name="extracting_error">Could not extract the item</string>
    <string name="extracting">Extracting&#8230;</string>
    <string name="compressing">Compressing&#8230;</string>

    <!-- new menu strings -->
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_search">Search</string>
    <string name="menu_create_folder">Create folder</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_multiselect">Multiselect</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_create_shortcut">Create shortcut</string>
    <string name="send_chooser_title">Send using:</string>
    <string name="menu_check_all">Check all</string>
    <string name="menu_uncheck_all">Uncheck all</string>

    <!-- Multi selection action strings -->
    <string name="selected">selected</string>
    <string name="no_selection">No items checked</string>
    <string name="bookmark_empty">No bookmarks added.</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_already_exists">This file is already bookmarked</string>
    <string name="bookmarks">Bookmarks</string>

    <!-- Search related -->
    <string name="search_hint">Search files</string>
    <string name="query_error">Query error</string>
    <string name="search_settings_descr">Files and folders in storage</string>
    <string name="preference_search_title">Clear history</string>
    <string name="preference_search_category">Search</string>
    <string name="preference_search_dialog_message">Clear search history?</string>
    <string name="search_history_cleared">Search history cleared</string>

    <!-- icon content description -->
    <string name="item_icon">Item icon</string>

    <!-- list layout -->
    <string name="scanning">Scanning&#8230;</string>

    <!-- Dialogs -->
    <string name="delete_success">Successfully deleted</string>
    <string name="delete_failure">Some files not deleted</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="rename_success">Successfully renamed</string>
    <string name="rename_failure">Couldn\'t rename</string>
    <string name="loading">Loading&#8230;</string>
    <string name="create_dir_success">Successfully created directory</string>
    <string name="create_dir_failure">Couldn\'t create directory</string>
    <string name="compressed_file_name">Zip file name</string>
    <string name="file_exists">File exists</string>
    <string name="overwrite_question">Overwrite old file?</string>
    <string name="directory_pick">Select current directory</string>
    <string name="filename_hint">File name</string>
    <string name="choose_filename">File name can\'t be empty!</string>
    <string name="pick_button_default">Pick file</string>

    <!-- CopyHelper statuses -->
    <string name="copying">Copying&#8230;</string>
    <string name="copied">Successfully copied</string>
    <string name="copy_error">Some or all items couldn\'t be copied!</string>
    <string name="moving">Moving&#8230;</string>
    <string name="moved">Successfully moved</string>
    <string name="move_error">Some or all items couldn\'t be moved!</string>
    <string name="nothing_to_paste">Nothing to paste. Copy or cut files first.</string>

    <plurals name="clipboard_info_items_to_copy">
        <item quantity="one">%1$d item to copy</item>
        <item quantity="other">%1$d items to copy</item>
    </plurals>
    <plurals name="clipboard_info_items_to_move">
        <item quantity="one">%1$d item to move</item>
        <item quantity="other">%1$d items to move</item>
    </plurals>

    <string name="clipboard_undo">Undo</string>
    <string name="clipboard_dismiss">Dismiss</string>
    <string name="preference_usebestmatch_title">Use best app for icons</string>
    <string name="preference_usebestmatch_summary_off">use most recently installed app</string>
    <string name="preference_usebestmatch_summary_on">use most suitable app</string>

</resources>