...
<!-- 		    android:layout_height="wrap_content"> -->
<!-- 		    <EditText android:id="@+id/filename" -->
<!-- 				    android:layout_width="0dip" -->
<!-- 				    android:layout_weight="1"  -->
<!-- 				    android:layout_height="wrap_content" /> -->
<!-- 			<Button android:id="@+id/button_pick" -->
<!-- 					android:text="@android:string/ok" -->
<!-- 				    android:layout_width="wrap_content"  -->
<!-- 				    android:layout_height="wrap_content" -->
<!-- 				    android:minWidth="64dip" /> -->
<!-- 		</LinearLayout> -->
		<org.openintents.filemanager.view.LegacyActionContainer
		    android:id="@+id/action_multiselect"
...
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_weight="1" >
        <!-- Here is the list. Since we are using a ListActivity, we
             have to call it "@android:id/list" so ListActivity will
             find it -->
<!--         <ListView android:id="@android:id/list" -->
<!--             android:layout_width="fill_parent"  -->
<!--             android:layout_height="fill_parent" -->
<!--             android:fastScrollEnabled="true" -->
<!--             android:drawSelectorOnTop="false" -->
...
