<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2007-2008 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foldername"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="60dp"
    android:hint="@string/folder_name"
    android:imeOptions="actionGo"
    android:inputType="textUri"
    android:maxLines="1" >

    <requestFocus />

</EditText>